Alteração no CSS do botão do topo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#top-menu" aria-controls="top-menu" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="navbar-collapse collapse" id="top-menu" style="">
+				<div class="navbar-collapse collapse" id="top-menu">
 					<ul class="navbar-nav ms-md-auto">
 						<li class="nav-item">
 							<a class="btn btn-light rounded-pill me-2 ps-4 pe-4"href="#">Login</a>
