Alteração de cores e banner.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 				<div class="navbar-collapse collapse" id="top-menu">
 					<ul class="navbar-nav ms-md-auto">
 						<li class="nav-item">
-							<a class="btn btn-light rounded-pill me-2 ps-4 pe-4"href="#">Login</a>
+							<a class="btn btn-outline-light rounded-pill me-2 ps-4 pe-4"href="#">Login</a>
 						</li>
 						<li class="nav-item">
-							<a class="btn btn-primary rounded-pill ps-4 pe-4" href="#">Sign-up</a>
+							<a class="btn btn-outline-warning rounded-pill ps-4 pe-4" href="#">Sign-up</a>
 						</li>
 					</ul>
 				</div>
@@ -37,11 +37,11 @@
         <div id="slider" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">					
-                    <img src="images/ban1_1.jpg" class="d-block w-100 ban_desktop" alt="Banner 1">
-					<img src="images/ban1_2.jpg" class="w-100 ban_mobile" alt="Banner 1">
+                    <img src="images/ban2_1.jpg" class="d-block w-100 ban_desktop" alt="Banner 1">
+					<img src="images/ban2_2.jpg" class="w-100 ban_mobile" alt="Banner 1">
 					<div class="carousel-caption d-none d-md-block">
-						<a href="#" class="btn btn-primary btn-lg rounded-pill me-2 ps-4 pe-4">Explorar</a>
-						<a href="#" class="btn btn-light btn-lg  rounded-pill ps-4 pe-4">Compartilhar</a>						
+						<a href="#" class="btn btn-warning btn-lg rounded-pill me-2 ps-4 pe-4">Explorar</a>
+						<a href="#" class="btn btn-primary btn-lg  rounded-pill ps-4 pe-4">Compartilhar</a>						
 					</div>					
                 </div>
             </div>
@@ -88,8 +88,8 @@
 							<div class="carousel-item active" data-bs-interval="10000">
 								<div class="row row-cols-1 row-cols-md-3 g-4 pb-5">
 									<div class="col-md-3 col-sm-12">
-										<div class="card">
-											<img src="images/destinations/ouro-preto.jpg" class="card-img-top w-100" alt="...">
+										<div class="card position-relative">
+											<div class="thumb position-relative"><img src="images/destinations/ouro-preto.jpg" class="card-img-top w-100" alt="..."></div>
 											<div class="card-body">
 												<h5 class="card-title">Ouro Preto <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>100</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
