--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
 	
 	
-					<p class="text-center"><a href="#" class="btn btn-primary btn-lg rounded-pill me-2 ps-4 pe-4 mt-3 mb-5">Explorar mais</a></p>
+					<p class="text-center"><a href="#" class="btn btn-warning btn-lg rounded-pill me-2 ps-4 pe-4 mt-3 mb-5">Explorar mais</a></p>
 
                 </div>
             </div>
