Alteração de cor de botões.

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Ouro Preto <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>100</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -105,8 +105,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Rio de Janeiro <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>75</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -117,8 +117,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Salvador <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>20</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -129,8 +129,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Curitiba <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>35</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -145,8 +145,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Ouro Preto <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>100</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -157,8 +157,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Rio de Janeiro <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>75</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -169,8 +169,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Salvador <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>20</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -181,8 +181,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Curitiba <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>35</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -197,8 +197,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Ouro Preto <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>100</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -209,8 +209,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Rio de Janeiro <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>75</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -221,8 +221,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Salvador <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>20</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
@@ -233,8 +233,8 @@
 											<div class="card-body">
 												<h5 class="card-title">Curitiba <button class="btn btn-light heart float-end"><i class="bi bi-heart-fill"></i> <span>35</span></button></h5>
 												<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-												<p><i class="bi bi-calendar3"></i> 2 dias</p>
-												<p><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></p>
+												<p class="mb-1"><span class="btn btn-secondary rounded-5"><i class="bi bi-calendar3"></i> 2 dias</span></p>
+												<p><span class="btn btn-secondary rounded-5"><i class="bi bi-cash-coin"></i> A partir de <strong>R$ 140,99</strong></span></p>
 												<p><small><i class="bi bi-credit-card-2-back"></i> Em até 12x</small></p>
 											</div>
 										</div>
